<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_run">Run</string>
    <string name="action_close">Close</string>
    <string name="view_animator">viewAnimator</string>
    <string name="edt_login">Login</string>
    <string name="edt_password">Password</string>
    <string name="title_activity_main_activity_two">MainActivityTwo</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_login">Login</string>
    <string name="btn_singup">SingUp</string>

</resources>
